test/expected/error_multibyte_column.out
[CompoundList]
  [CompoundListCondition, None]
    [Assign a=€]
  [CompoundListCondition, None]
    [SimpleCommand "doesnotexist_xyz*"]
[Word
  Unquoted "a=€"
]
[Word
  Unquoted "doesnotexist_xyz*"
]
shit: 3:1: error: No matches for the glob pattern 'doesnotexist_xyz*'.
     3 |  doesnotexist_xyz*
       |  ^~~~~~~~~~~~~~~~~ here.
